--- a/examples/tosca-server-example-ansible-amazon.yaml
+++ b/examples/tosca-server-example-ansible-amazon.yaml
@@ -4,26 +4,26 @@
   hosts: localhost
   tasks:
   - file:
-      path: /home/sadimer/Desktop/ISPRAS/clouni/examples/id_vars_example.yaml
+      path: id_vars_example.yaml
       state: absent
   - file:
-      path: /home/sadimer/Desktop/ISPRAS/clouni/examples/id_vars_example.yaml
+      path: id_vars_example.yaml
       state: touch
-  - include_vars: /home/sadimer/Desktop/ISPRAS/clouni/examples/id_vars_example.yaml
+  - include_vars: id_vars_example.yaml
   - name: Create Amazon aws component key
     ec2_key:
       name: tosca_server_example_key
       key_material: '{{ lookup(''file'', ''~/.ssh/id_rsa.pub'') }}'
     register: tosca_server_example_key
   - lineinfile:
-      path: /home/sadimer/Desktop/ISPRAS/clouni/examples/id_vars_example.yaml
+      path: id_vars_example.yaml
       line: 'tosca_server_example_key_delete: {{ tosca_server_example_key.key.name
         }}'
     when: tosca_server_example_key.key.name is defined
 - name: 'Create Amazon aws component amazon cluster: tosca_server_example_group:create'
   hosts: localhost
   tasks:
-  - include_vars: /home/sadimer/Desktop/ISPRAS/clouni/examples/id_vars_example.yaml
+  - include_vars: id_vars_example.yaml
   - name: Create Amazon aws component group
     ec2_group:
       description: tosca_server_example_group
@@ -52,21 +52,21 @@
         tosca_server_example_group_ids: '{{ tosca_server_example_group_list }}'
     when: tosca_server_example_group_list is defined
   - lineinfile:
-      path: /home/sadimer/Desktop/ISPRAS/clouni/examples/id_vars_example.yaml
+      path: id_vars_example.yaml
       line: 'tosca_server_example_group_delete: {{ tosca_server_example_group.id }}'
     when: tosca_server_example_group.id is defined
   - lineinfile:
-      path: /home/sadimer/Desktop/ISPRAS/clouni/examples/id_vars_example.yaml
+      path: id_vars_example.yaml
       line: 'tosca_server_example_group_delete: {{ tosca_server_example_group.group_id
         }}'
     when: tosca_server_example_group.group_id is defined
   - lineinfile:
-      path: /home/sadimer/Desktop/ISPRAS/clouni/examples/id_vars_example.yaml
+      path: id_vars_example.yaml
       line: 'tosca_server_example_group_delete: {{ tosca_server_example_group.group.id
         }}'
     when: tosca_server_example_group.group.id is defined
   - lineinfile:
-      path: /home/sadimer/Desktop/ISPRAS/clouni/examples/id_vars_example.yaml
+      path: id_vars_example.yaml
       line: '{{ tosca_server_example_group_list | to_nice_yaml }}'
     when: tosca_server_example_group_list is defined
   - fail:
@@ -77,7 +77,7 @@
 - name: 'Create Amazon aws component amazon cluster: tosca_server_example_instance:create'
   hosts: localhost
   tasks:
-  - include_vars: /home/sadimer/Desktop/ISPRAS/clouni/examples/id_vars_example.yaml
+  - include_vars: id_vars_example.yaml
   - name: Create Amazon aws component instance
     ec2_instance:
       network:
@@ -121,22 +121,22 @@
           }}'
     when: tosca_server_example_instance_list is defined
   - lineinfile:
-      path: /home/sadimer/Desktop/ISPRAS/clouni/examples/id_vars_example.yaml
+      path: id_vars_example.yaml
       line: 'tosca_server_example_instance_delete: {{ tosca_server_example_instance.id
         }}'
     when: tosca_server_example_instance.id is defined
   - lineinfile:
-      path: /home/sadimer/Desktop/ISPRAS/clouni/examples/id_vars_example.yaml
+      path: id_vars_example.yaml
       line: 'tosca_server_example_instance_delete: {{ tosca_server_example_instance.instance_id
         }}'
     when: tosca_server_example_instance.instance_id is defined
   - lineinfile:
-      path: /home/sadimer/Desktop/ISPRAS/clouni/examples/id_vars_example.yaml
+      path: id_vars_example.yaml
       line: 'tosca_server_example_instance_delete: {{ tosca_server_example_instance.instance.id
         }}'
     when: tosca_server_example_instance.instance.id is defined
   - lineinfile:
-      path: /home/sadimer/Desktop/ISPRAS/clouni/examples/id_vars_example.yaml
+      path: id_vars_example.yaml
       line: '{{ tosca_server_example_instance_list | to_nice_yaml }}'
     when: tosca_server_example_instance_list is defined
   - fail:
