--- a/toscatranslator/providers/amazon/provider.cfg
+++ b/toscatranslator/providers/amazon/provider.cfg
@@ -11,9 +11,7 @@ modules_skipping_delete = ''
 [ansible.node_filter]
 node_filter_source_prefix = ec2_
 node_filter_source_postfix = _info
-node_filter_exceptions =
-    instance_type = ec2_instance_type_facts
 node_filter_inner_variable =
-    instance_type = ansible_facts,amazon_instance_types
+    instance_type = instance_types
 node_filter_inner_value =
     instance_type = apiname
