--- a/examples/tosca-network-and-port-example-ansible-amazon.yaml
+++ b/examples/tosca-network-and-port-example-ansible-amazon.yaml
@@ -3,12 +3,12 @@
   hosts: localhost
   tasks:
   - file:
-      path: /home/sadimer/Desktop/ISPRAS/clouni/examples/id_vars_example.yaml
+      path: id_vars_example.yaml
       state: absent
   - file:
-      path: /home/sadimer/Desktop/ISPRAS/clouni/examples/id_vars_example.yaml
+      path: id_vars_example.yaml
       state: touch
-  - include_vars: /home/sadimer/Desktop/ISPRAS/clouni/examples/id_vars_example.yaml
+  - include_vars: id_vars_example.yaml
   - name: Create Amazon aws component vpc net
     ec2_vpc_net:
       cidr_block: 192.168.56.0/24
@@ -29,23 +29,23 @@
         my_network_vpc_net_ids: '{{ my_network_vpc_net_list }}'
     when: my_network_vpc_net_list is defined
   - lineinfile:
-      path: /home/sadimer/Desktop/ISPRAS/clouni/examples/id_vars_example.yaml
+      path: /id_vars_example.yaml
       line: 'my_network_vpc_net_delete: {{ my_network_vpc_net.id }}'
     when: my_network_vpc_net.id is defined
   - lineinfile:
-      path: /home/sadimer/Desktop/ISPRAS/clouni/examples/id_vars_example.yaml
+      path: id_vars_example.yaml
       line: 'my_network_vpc_net_delete: {{ my_network_vpc_net.vpc_net_id }}'
     when: my_network_vpc_net.vpc_net_id is defined
   - lineinfile:
-      path: /home/sadimer/Desktop/ISPRAS/clouni/examples/id_vars_example.yaml
+      path: id_vars_example.yaml
       line: 'my_network_vpc_net_delete: {{ my_network_vpc_net.vpc.id }}'
     when: my_network_vpc_net.vpc.id is defined
   - lineinfile:
-      path: /home/sadimer/Desktop/ISPRAS/clouni/examples/id_vars_example.yaml
+      path: id_vars_example.yaml
       line: 'my_network_vpc_net_delete: {{ my_network_vpc_net.net.id }}'
     when: my_network_vpc_net.net.id is defined
   - lineinfile:
-      path: /home/sadimer/Desktop/ISPRAS/clouni/examples/id_vars_example.yaml
+      path: id_vars_example.yaml
       line: '{{ my_network_vpc_net_list | to_nice_yaml }}'
     when: my_network_vpc_net_list is defined
   - fail:
@@ -55,7 +55,7 @@
 - name: 'Create Amazon aws component amazon cluster: my_network_vpc_subnet:create'
   hosts: localhost
   tasks:
-  - include_vars: /home/sadimer/Desktop/ISPRAS/clouni/examples/id_vars_example.yaml
+  - include_vars: id_vars_example.yaml
   - name: Create Amazon aws component vpc subnet
     ec2_vpc_subnet:
       cidr: 192.168.56.0/24
@@ -78,24 +78,24 @@
         my_network_vpc_subnet_ids: '{{ my_network_vpc_subnet_list }}'
     when: my_network_vpc_subnet_list is defined
   - lineinfile:
-      path: /home/sadimer/Desktop/ISPRAS/clouni/examples/id_vars_example.yaml
+      path: id_vars_example.yaml
       line: 'my_network_vpc_subnet_delete: {{ my_network_vpc_subnet.id }}'
     when: my_network_vpc_subnet.id is defined
   - lineinfile:
-      path: /home/sadimer/Desktop/ISPRAS/clouni/examples/id_vars_example.yaml
+      path: id_vars_example.yaml
       line: 'my_network_vpc_subnet_delete: {{ my_network_vpc_subnet.vpc_subnet_id
         }}'
     when: my_network_vpc_subnet.vpc_subnet_id is defined
   - lineinfile:
-      path: /home/sadimer/Desktop/ISPRAS/clouni/examples/id_vars_example.yaml
+      path: id_vars_example.yaml
       line: 'my_network_vpc_subnet_delete: {{ my_network_vpc_subnet.vpc.id }}'
     when: my_network_vpc_subnet.vpc.id is defined
   - lineinfile:
-      path: /home/sadimer/Desktop/ISPRAS/clouni/examples/id_vars_example.yaml
+      path: id_vars_example.yaml
       line: 'my_network_vpc_subnet_delete: {{ my_network_vpc_subnet.subnet.id }}'
     when: my_network_vpc_subnet.subnet.id is defined
   - lineinfile:
-      path: /home/sadimer/Desktop/ISPRAS/clouni/examples/id_vars_example.yaml
+      path: id_vars_example.yaml
       line: '{{ my_network_vpc_subnet_list | to_nice_yaml }}'
     when: my_network_vpc_subnet_list is defined
   - fail:
@@ -106,7 +106,7 @@
 - name: 'Create Amazon aws component amazon cluster: my_port_eni:create'
   hosts: localhost
   tasks:
-  - include_vars: /home/sadimer/Desktop/ISPRAS/clouni/examples/id_vars_example.yaml
+  - include_vars: id_vars_example.yaml
   - name: Create Amazon aws component eni
     ec2_eni:
       private_ip_address: 192.168.56.100
@@ -127,19 +127,19 @@
         my_port_eni_ids: '{{ my_port_eni_list }}'
     when: my_port_eni_list is defined
   - lineinfile:
-      path: /home/sadimer/Desktop/ISPRAS/clouni/examples/id_vars_example.yaml
+      path: id_vars_example.yaml
       line: 'my_port_eni_delete: {{ my_port_eni.id }}'
     when: my_port_eni.id is defined
   - lineinfile:
-      path: /home/sadimer/Desktop/ISPRAS/clouni/examples/id_vars_example.yaml
+      path: id_vars_example.yaml
       line: 'my_port_eni_delete: {{ my_port_eni.eni_id }}'
     when: my_port_eni.eni_id is defined
   - lineinfile:
-      path: /home/sadimer/Desktop/ISPRAS/clouni/examples/id_vars_example.yaml
+      path: id_vars_example.yaml
       line: 'my_port_eni_delete: {{ my_port_eni.eni.id }}'
     when: my_port_eni.eni.id is defined
   - lineinfile:
-      path: /home/sadimer/Desktop/ISPRAS/clouni/examples/id_vars_example.yaml
+      path: id_vars_example.yaml
       line: '{{ my_port_eni_list | to_nice_yaml }}'
     when: my_port_eni_list is defined
   - fail:
