--- a/rest_clouni/Dockerfile
+++ b/rest_clouni/Dockerfile
@@ -8,17 +8,14 @@ RUN git clone https://github.com/bura2017/tosca-parser.git &&\
     git checkout develop &&\
     pip install -U -r requirements.txt &&\
     python setup.py install
-RUN git clone https://github.com/ispras/clouni.git &&\
+RUN git clone https://github.com/AlexanderMishutkin/clouni.git &&\
     cd clouni &&\
     git checkout http-api &&\
     pip install -U -r requirements.txt &&\
     pip install -U -r requirements-rest.txt &&\
     python setup.py install
-RUN rm -r clouni tosca-parser
-RUN apt remove git -y &&\
-    apt autoremove -y &&\
-    apt clean \
-ENV FLASK_APP=/app/clouni/rest_clouni/app.py
+RUN cd clouni && mkdir artifacts
+ENV FLASK_APP /app/clouni/rest_clouni/app.py
 WORKDIR /app/clouni/
 EXPOSE 5000
 CMD [ "python", "-m" , "flask", "run", "--host=0.0.0.0"]
